--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,17 +7,18 @@ project(ntt-kv
 include(cmake/ntt-kv.cmake)
 
 add_library(${NTT_KV})
+add_library(ntt::kv ALIAS ${NTT_KV})
 
 target_compile_features(${NTT_KV} PRIVATE cxx_std_23)
 
 target_sources(${NTT_KV}
   PRIVATE
-  ${NTT_KV_SRC_PREFIX}/kv.cpp
+    ${NTT_KV_SRC_PREFIX}/kv.cpp
 )
 
 target_include_directories(${NTT_KV}
-  PRIVATE
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 )
 
 # dependencies
@@ -25,17 +26,27 @@ find_package(inja CONFIG REQUIRED)
 target_link_libraries(${NTT_KV} PRIVATE pantor::inja)
 
 find_package(benchmark CONFIG REQUIRED)
-target_link_libraries(${NTT_KV} PRIVATE benchmark::benchmark benchmark::benchmark_main)
-
 find_package(fmt CONFIG REQUIRED)
-target_link_libraries(${NTT_KV} PRIVATE fmt::fmt)
-
-# this is heuristically generated, and may not be correct
 find_package(inja CONFIG REQUIRED)
-target_link_libraries(${NTT_KV} PRIVATE pantor::inja)
-
-# this is heuristically generated, and may not be correct
 find_package(spdlog CONFIG REQUIRED)
-target_link_libraries(${NTT_KV} PRIVATE spdlog::spdlog spdlog::spdlog_header_only)
+
+target_link_libraries(${NTT_KV}
+  PRIVATE
+    benchmark::benchmark
+    benchmark::benchmark_main
+    fmt::fmt
+    pantor::inja
+    spdlog::spdlog
+    spdlog::spdlog_header_only
+)
+
+install(TARGETS ${NTT_KV}
+  DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
+  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
+)
+
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include
+  DESTINATION ${CMAKE_INSTALL_PREFIX}/include
+)
 
 add_subdirectory(test)
